# Azaria

./: .editorconfig  .gitconfig  .gitignore  LICENSE  Pipfile  app.py  config_handler.py  conftest.py  log_handle.py  main.py  pyproject.toml  requirements.txt  test_all.py  tests.py  token_handler.py  version.py
.github/workflows/: black.yml  hide-secrets.yml  isort.yml  mypy.yml  pylint.yml  pytest.yml  python-app.yml
templates/: index.html
user/: config.toml
